fix: resolve layout issues with semantic ui and datatables 2

--- a/css/common.scss
+++ b/css/common.scss
@@ -202,6 +202,7 @@ div.dtsp-panesContainer {
 					vertical-align: middle;
 					white-space: nowrap;
 					flex-grow: 1;
+					text-align: left;
 				}
 			
 				span.dtsp-pill {
