--- a/css/searchPanes.semanticui.scss
+++ b/css/searchPanes.semanticui.scss
@@ -95,6 +95,11 @@ div.dtsp-searchPane {
             margin-top: 3.5px;
         }
     }
+
+    div.ui.grid {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
 }
 
 div.dt-button-collection {
